Asset to frontend merge

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <img src="../asset/paper-plane.png" alt="eChat Image" class="logo">
+        <img src="./asset/paper-plane.png" alt="eChat Image" class="logo">
         <h1>Welcome to eChat - Let's Talk with people</h1>
     </nav>
     <div class="outer">
