changes in link

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eChat - Chat with Friends in RealTime</title>
-    <script defer src="https://echats.netlify.app/.netlify/functions/socket"></script>
+    <!-- <script defer src="https://echats.netlify.app/.netlify/functions/socket"></script> -->
     <script defer src="client.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
