--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eChat - Chat with Friends in RealTime</title>
-    <script defer src="http://localhost:8000/socket.io/socket.io.js"></script>
+    <script defer src="https://echat-backend.onrender.com/socket.io/socket.io.js"></script>
     <script defer src="client.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
