--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>eChat - Chat with Friends in RealTime</title>
-    <script defer src="https://echat-backend.onrender.com/socket.io/socket.io.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="./asset/favicon_io/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./asset/favicon_io/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./asset/favicon_io/favicon-16x16.png" />
+    <link rel="manifest" href="./asset/favicon_io/site.webmanifest" />
+    <script
+      defer
+      src="https://echat-backend.onrender.com/socket.io/socket.io.js"
+    ></script>
     <script defer src="client.js"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <nav>
-        <img src="./asset/paper-plane.png" alt="eChat Image" class="logo">
-        <h1>Welcome to eChat - Let's Talk with people</h1>
+      <img src="./asset/paper-plane.png" alt="eChat Image" class="logo" />
+      <h1>Welcome to eChat - Let's Talk with people</h1>
     </nav>
     <div class="outer">
-        <div class="container"></div>
+      <div class="container"></div>
     </div>
 
     <div class="send">
-        <form action="#" id="send-container">
-            <input type="text" name="messageInp" id="messageInp" placeholder="Type a message...">
-            <button class="btn" type="submit">Send</button>
-        </form>
+      <form action="#" id="send-container">
+        <input
+          type="text"
+          name="messageInp"
+          id="messageInp"
+          placeholder="Type a message..."
+        />
+        <button class="btn" type="submit">Send</button>
+      </form>
     </div>
-</body>
+  </body>
 </html>
